--- a/ImageEdit/res/layout/activity_image_edit.xml
+++ b/ImageEdit/res/layout/activity_image_edit.xml
@@ -53,7 +53,7 @@
                 android:layout_height="fill_parent"
                 android:gravity="center"
                 android:text="应用"
-                android:textColor="#000000"
+                android:textColor="#ffffff"
                 android:textSize="20sp" />
         </ViewFlipper>
     </FrameLayout>
