--- a/ImageEdit/res/layout/view_sticker_type_item.xml
+++ b/ImageEdit/res/layout/view_sticker_type_item.xml
@@ -3,10 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="20dp"
     android:paddingLeft="20dp"
-    android:paddingRight="20dp"
-    android:paddingTop="20dp" >
+    android:paddingRight="20dp">
 
     <ImageView
         android:id="@+id/icon"
